src/scss/06_components/navigation/_header-bottom-navigation.scss
$-main-nav-spacing: 20px;
$-main-nav-dropdown-padding: $-main-nav-spacing;

.header-bottom {
  background-color: $color-white;

  @include breakpoint($breakpoint-l) {
    border-bottom: 1px solid $color-black-20;
  }

  .menu {
    display: none;
    margin: 0;
    padding: 0;

    // Focus ring uses extra elements instead of native outline css.
    // This element needs to be put into z-index context or
    // other menus will just make a mess.
    z-index: 0;

    @include breakpoint($breakpoint-l) {
      display: flex;
    }
  }

  .menu--level-0,
  .site-name__container {
    @include flex-gap($-main-nav-spacing, $spacing-double);
    flex-wrap: wrap;
  }

  .site-name__container {
    display: none;
    padding-top: $spacing-and-half;

    @include breakpoint($breakpoint-l) {
      display: flex;
    }
  }

  .site-name__link {
    @include font('special.site_name');
    text-decoration: none;

    &:hover,
    &:focus {
      text-decoration: underline;
    }
  }

  .menu__item {
    @include font('special.navigation.main_nav');
    list-style: none;
    position: relative;
    z-index: 2;
  }

  // Menu toggle button
  .menu__toggle-button {
    background-color: $color-black-5;
    border: none;
    margin-left: $spacing-quarter;
    padding: 0;

    &:hover {
      cursor: pointer;
    }

    &:focus {
      box-shadow: 0 0 0 3px $color-black;
      outline: none;
      padding: 6px 0;
    }
  }

  .menu__toggle-button-icon {
    @include rotating-icon-transition;
  }

  // Icon rotates around
  [aria-expanded='true'] > .menu__toggle-button-icon {
    transform: rotate(180deg);
  }

  .menu__item--nolink {
    @include font('body'); // TODO: is this whole selector unnecessary?
    padding: $spacing-and-half 0;
    text-decoration: none;
  }

  .menu__link-wrapper {
    align-items: center;
    display: flex;
    height: 100%;
    position: relative;
  }

  .menu__link {
    display: inline-block;
    padding: $spacing-and-half 0;

    &::before {
      background-color: $color-black;
      bottom: 0;
      content: '';
      height: 0;
      left: 0;
      margin: 0 auto;
      position: absolute;
      right: 0;
      transition: all 0.5s cubic-bezier(0.19, 1, 0.22, 1);
      width: 0;
    }

    &[aria-current='page']::before {
      height: 4px;
      width: 100%;
    }

    &:focus {
      outline: none;

      &::after {
        box-shadow: 0 0 0 3px $color-black;
        content: '';
        display: block;
        height: 50%;
        left: -#{$spacing-quarter};
        position: absolute;
        top: 50%;
        transform: translateY(-50%);
        width: calc(100% + #{$spacing-half});
      }
    }
  }

  // Handle menu link focus style when it has children
  .menu__item--item-below .menu__link:focus::after {
    left: -2px;
    width: calc(100% - #{$spacing-and-half}); // Width of the dropdown button and padding.
  }

  // Active trail items, first level
  .menu__link--active-trail {
    font-weight: $font-weight-bold;

    &::before {
      height: 4px;
      width: 100%;
    }
  }

  .menu__link__text {
    display: inline-block;
  }

  .menu--level-1 {
    background-color: $color-white;
    border: 1px solid $color-black-20;
    bottom: auto;
    display: none; // By default hide the secondary items
    left: - $-main-nav-dropdown-padding;
    min-width: 310px;
    position: absolute;
    width: calc(100% + #{$spacing-quadruple});
    z-index: 100;
  }

  // Secondary menu items open
  .menu__item--hover,
  .menu__item--open {
    .menu--level-1 {
      display: block;
    }
  }

  .menu--level-1 .menu__toggle-button {
    display: none;
  }

  .menu--level-1 .menu__link,
  .menu--level-1 .menu__item--nolink {
    @include font('special.navigation.sub_nav');
    display: block;
    padding: $spacing $-main-nav-dropdown-padding;

    &::before {
      bottom: 0;
      height: 100%;
      left: 0;
      margin: 0;
      right: auto;
      top: 0;
      transition: width 100ms ease-in;
    }

    &:focus {
      margin: 0;

      &::after {
        height: 100%;
        left: $spacing-half;
        width: calc(100% - #{$spacing});
      }
    }

    &[aria-current='page'] {
      font-weight: $font-weight-bold;
    }

    &:hover,
    &[aria-current='page'],
    &.menu__link--active-trail {
      &::before {
        height: 100%;
        width: 4px;
      }
    }
  }

  // Active trail items, second level
  .menu--level-1 .menu__item--active-trail::before {
    height: 100%;
    width: 0;
  }
}

